[package]
name = "task_master"
version = "0.1.0"
authors = ["Nicolas Bouchinet <nicolas.bouchinet@protonmail.com>", "Oguzhan Yagci <oyagci@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = "1.0"
serde_derive = "1.0.106"
libc = "0.2.9"

log = "0.4.8"
env_logger = "0.7.1"
